--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -140,6 +140,33 @@ endif()
 target_link_libraries(vec2d_mult2 my_cuda)
 set_property(TARGET vec2d_mult2 PROPERTY CUDA_ARCHITECTURES 61)
 
+add_executable(vec2d_mult3 vec2d_mult3.cpp)
+if (OPENMP_FOUND)
+    target_link_libraries(vec2d_mult3 ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX)
+else()
+target_link_libraries(vec2d_mult3 ${CUDA_LIBRARIES})
+endif()
+target_link_libraries(vec2d_mult3 my_cuda)
+set_property(TARGET vec2d_mult3 PROPERTY CUDA_ARCHITECTURES 61)
+
+add_executable(vec3d_mult vec3d_mult.cpp)
+if (OPENMP_FOUND)
+    target_link_libraries(vec3d_mult ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX)
+else()
+target_link_libraries(vec3d_mult ${CUDA_LIBRARIES})
+endif()
+target_link_libraries(vec3d_mult my_cuda)
+set_property(TARGET vec3d_mult PROPERTY CUDA_ARCHITECTURES 61)
+
+add_executable(vec3d_mult2 vec3d_mult2.cpp)
+if (OPENMP_FOUND)
+    target_link_libraries(vec3d_mult2 ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX)
+else()
+target_link_libraries(vec3d_mult2 ${CUDA_LIBRARIES})
+endif()
+target_link_libraries(vec3d_mult2 my_cuda)
+set_property(TARGET vec3d_mult2 PROPERTY CUDA_ARCHITECTURES 61)
+
 
 #cuda_add_executable(main main.cpp)
 #target_link_libraries(main ${CUDA_LIBRARIES})
