--- a/lib/filesystem/CMakeLists.txt
+++ b/lib/filesystem/CMakeLists.txt
@@ -34,3 +34,10 @@ set(HEADERS
 #add_library(filesystem_static STATIC ${SRCS} ${HEADERS})
 add_library(filesystem SHARED ${SRCS} ${HEADERS})
 target_link_libraries(filesystem ${Boost_LIBRARIES})
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
+    set_target_properties(filesystem PROPERTIES UNITY_BUILD ON)
+	target_precompile_headers(filesystem PUBLIC ${HEADERS})
+    message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
+else()
+    message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
+endif()
