--- a/lib/std/CMakeLists.txt
+++ b/lib/std/CMakeLists.txt
@@ -13,3 +13,10 @@ set(HEADERS
 
 #add_library(filesystem_static STATIC ${SRCS} ${HEADERS})
 add_library(std SHARED ${SRCS} ${HEADERS})
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
+    set_target_properties(std PROPERTIES UNITY_BUILD ON)
+	target_precompile_headers(std PUBLIC ${HEADERS})
+    message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
+else()
+    message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
+endif()
