--- a/lib/string_lib/CMakeLists.txt
+++ b/lib/string_lib/CMakeLists.txt
@@ -16,3 +16,10 @@ set(HEADERS
 
 #add_library(filesystem_static STATIC ${SRCS} ${HEADERS})
 add_library(string_lib SHARED ${SRCS} ${HEADERS})
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
+    set_target_properties(string_lib PROPERTIES UNITY_BUILD ON)
+	target_precompile_headers(string_lib PUBLIC ${HEADERS})
+    message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
+else()
+    message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
+endif()
