--- a/lib/texture/CMakeLists.txt
+++ b/lib/texture/CMakeLists.txt
@@ -23,3 +23,10 @@ set(HEADERS
 
 #add_library(texture_static STATIC ${SRCS} ${HEADERS})
 add_library(texture SHARED ${SRCS} ${HEADERS})
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
+    set_target_properties(texture PROPERTIES UNITY_BUILD ON)
+	target_precompile_headers(texture PUBLIC ${HEADERS})
+    message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
+else()
+    message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
+endif()
