--- a/lib/convert_utils/CMakeLists.txt
+++ b/lib/convert_utils/CMakeLists.txt
@@ -46,7 +46,7 @@ target_include_directories(convert_utils PUBLIC
 
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
     set_target_properties(convert_utils PROPERTIES UNITY_BUILD ON)
-	target_precompile_headers(convert_utils PUBLIC ${HEADERS})
+	#target_precompile_headers(convert_utils PUBLIC ${HEADERS})
     message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
 else()
     message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
