--- a/lib/math/CMakeLists.txt
+++ b/lib/math/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.11)
 
-project(math C CXX)
+project(math VERSION 0.0.5 LANGUAGES CXX C)
 
 
 set(SRCS
@@ -38,7 +38,13 @@ set(HEADERS
 
 #add_library(math_static STATIC ${SRCS} ${HEADERS})
 add_library(math SHARED ${SRCS} ${HEADERS})
-
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
+    set_target_properties(math PROPERTIES UNITY_BUILD ON)
+	#target_precompile_headers(math PUBLIC ${HEADERS})
+    message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
+else()
+    message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
+endif()
 
 install(TARGETS math LIBRARY DESTINATION lib
                       ARCHIVE DESTINATION lib)
