--- a/lib/utils/opencv/CMakeLists.txt
+++ b/lib/utils/opencv/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.11)
 
-project(utils CXX C)
+project(utils LANGUAGES CXX C)
 
 set(SRCS
 	opencv_utils.cpp
@@ -14,7 +14,7 @@ set(HEADERS
 add_library(utils_opencv SHARED ${SRCS} ${HEADERS})
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
     set_target_properties(utils_opencv PROPERTIES UNITY_BUILD ON)
-	target_precompile_headers(utils_opencv PUBLIC ${HEADERS})
+	#target_precompile_headers(utils_opencv PUBLIC ${HEADERS})
     message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
 else()
     message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
