--- a/lib/crypto/CMakeLists.txt
+++ b/lib/crypto/CMakeLists.txt
@@ -33,7 +33,7 @@ target_link_libraries(my_crypto PRIVATE ssl crypto)
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
     set_target_properties(my_crypto PROPERTIES UNITY_BUILD ON)
 	#target_precompile_headers(my_crypto PUBLIC ${HEADERS})
-    message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
+    message(STATUS "CMAKE_UNITY_BUILD : ON ${PROJECT_NAME}")
 else()
-    message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
+    message(STATUS "CMAKE_UNITY_BUILD : OFF on ${PROJECT_NAME}")
 endif()
